@@ -9,8 +9,7 @@
 <fieldset class="form">
 	<legend><?cs var:html_escape(Lang.Legend.GnupgConvert) ?> </legend>
 
-	<form method="post" action="<?cs call:link("","","","","","") ?>" enctype="application/x-www-form-urlencoded">
-		<input type="hidden" name="list" value="<?cs var:Data.List.Name ?>" />
+	<?cs call:form_header("gnupg_convert", "") ?>
 		<?cs if:Data.List.Features.Crypto
 			?><button type="submit" name="send" value="do"><?cs
 			var:html_escape(Lang.Buttons.GnupgConvertToPlain) ?></button>
